# telnet-openmls-demo

./: .gitignore  Cargo.toml  README.md
crates/chat_core/: Cargo.toml
crates/chat_core/src/: auth_service.rs  ext_mls.rs
crates/chat_core/src/ext_mls/: helpers.rs
crates/openmls-group/: Cargo.toml  README.md
crates/openmls-group/src/: accept.rs  client.rs  group_chat.rs  lib.rs  main.rs  main_loop.rs  telnet.rs
crates/openmls-group/src/ext_mls/: group_chat.rs  memory_provider.rs
crates/web/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  user_stories.md
crates/web/configuration/: base.yaml  local.yaml  production.yaml
crates/web/docs/: ms_token_resp.json  rush booking.postman_collection.json
crates/web/scripts/: init_code_report_cov.sh  init_db.sh  init_jwt_keypair.sh  init_keypair.sh  init_redis.sh
crates/web/src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs  utils.rs
crates/web/tests/: custom.rs
crates/web/tests/api/: handle_identity_with_as.rs  health_check.rs  helpers.rs  main.rs
docs/HOWTOs/: CREATE_GROUP.md
