[package]
name = "chat_core"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[dependencies]
openmls = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_memory_storage = { workspace = true }
