[package]
name = "openmls-group"
version = "0.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = "1.0.1"
rand = { version = "0.8" }
futures = "0.3.12"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
thiserror = { version = "1" }
serde = { workspace = true }
