[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web"

[dependencies]
# Async runtime
tokio = { workspace = true }
# Application
actix-web = "4"
actix-cors = "0.7.0"
# Env configuration
config = "0.13"
# Error handler
thiserror = { workspace = true }
anyhow = { workspace = true }
# Telemetry
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
tracing-actix-web = "0.7"
# Data formatter
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
serde-aux = "4"
secrecy = { version = "0.8", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# Data handler
validator = "0.16"
unicode-segmentation = "1"
rand = { version = "0.8", features = ["std_rng"] }
#Crypto
ring = "0.17.8"
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
argon2 = { version = "0.4", features = ["std"] }

# Http client
[dependencies.reqwest]
version = "0.11"
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
# Assert pretty
claims = "0.7"
# Generate data for Property-based testing
fake = "~2.3"
# Data for table-testing
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
